<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ListView
            android:id="@+id/lvCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:layout_above="@+id/layPage"
            android:scrollbars="none"/>

    <RelativeLayout
            android:id="@+id/layPage"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_alignParentBottom="true">
        <Button
                android:id="@+id/btnFirst"
                android:layout_width="40dip"
                android:layout_height="match_parent"
                android:background="@null"
                android:textColor="@android:color/black"
                android:text="@string/btn_first"/>
        <Button
                android:id="@+id/btnPrior"
                android:layout_width="40dip"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/btnFirst"
                android:background="@null"
                android:textColor="@android:color/black"
                android:text="@string/btn_prior"/>
        <TextView
                android:id="@+id/tvPage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_toRightOf="@+id/btnPrior"
                android:layout_toLeftOf="@+id/btnNext"/>
        <Button
                android:id="@+id/btnNext"
                android:layout_width="40dip"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/btnLast"
                android:background="@null"
                android:textColor="@android:color/black"
                android:text="@string/btn_next"/>
        <Button
                android:id="@+id/btnLast"
                android:layout_width="40dip"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:textColor="@android:color/black"
                android:text="@string/btn_last"/>
    </RelativeLayout>
</RelativeLayout>